samples/_failures_safe/1761512244_ff2c03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cc2a499.c: In function ‘main’:
./samples/SAFE/__tmp_9cc2a499.c:158:9: error: expected declaration or statement at end of input
  158 |         choice = read_int("Select operation: ", 1, 5);
      |         ^~~~~~
./samples/SAFE/__tmp_9cc2a499.c:158:9: error: expected declaration or statement at end of input
